# cmpcfgs

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: CFG.h  CFGsContainer.h  CfgData.h  CfgNode.h  Instruction.h  SimpleStrategy.h  SpecificStrategy.h  Strategy.h
src/: CFG.cpp  CFGsContainer.cpp  CfgData.cpp  CfgNode.cpp  Instruction.cpp  SimpleStrategy.cpp  SpecificStrategy.cpp  Strategy.cpp  cmpcfgs.cpp
